# bitvec

./: .editorconfig  .gitignore  .gitmodules  .markdownlint.yml  .travis.yml  404.html  AUTHORS.txt  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  ROADMAP.md  SECURITY.md  afterword.html  book.toml  clippy.toml  data-structures.html  dedication.html  index.html  introduction.html  memory-model.html  memory-representation.html  miscellaneous.html  performance.html  pointer-encoding.html  practical-use.html  print.html  rust-toolchain.toml  rustfmt-nightly.toml  rustfmt-stable.toml  rustfmt.toml  searchindex.js  searchindex.json  tarpaulin.toml  type-parameters.html
.github/workflows/: gh-pages.yml
benches/: eq.rs  macros.rs  memcpy.rs  slice.rs  vec_rotate.rs
book/: SUMMARY.md  afterword.md  bit-ordering.md  data-structures.md  dedication.md  introduction.md  memory-model.md  memory-representation.md  miscellaneous.md  performance.md  pointer-encoding.md  practical-use.md  type-parameters.md
book/data-structures/: bitarray.md  bitslice.md  bitvec.md
book/practical-use/: bitfields.md  collections.md
book/type-parameters/: bitorder.md  bitstore.md
ci/: coverage.sh  install_rust.sh  install_tarpaulin.sh  install_taurpin.sh  notes.md  script.sh  target_check_all.txt  target_check_no_serde.txt  target_check_no_std.txt  target_local.txt  target_notest.txt  target_test.txt  target_test_all.txt  target_test_no_serde.txt  targets.txt
data-structures/: bitarray.html  bitslice.html  bitvec.html
doc/: Atomicity.md  Bit Ordering.md  Bit Patterns.md  Memory Model.md  Pointer Representation.md  field.md  serdes.md  set.md  store.md
doc/access/: BitAccess.md
doc/boxed/: iter.md
doc/domain/: BitDomain.md  Domain.md
doc/field/: BitField_Lsb0_load_be.md  BitField_Lsb0_load_le.md  BitField_Lsb0_store_be.md  BitField_Lsb0_store_le.md  BitField_Msb0_load_be.md  BitField_Msb0_load_le.md  BitField_Msb0_store_be.md  BitField_Msb0_store_le.md  BitField_load_be.md  BitField_load_le.md  BitField_store_be.md  BitField_store_le.md
doc/macros/: BitArr_type.md  bitarr_value.md  bits.md  encode_bits.md
doc/mem/: BitElement.md
doc/order/: LocalBits.md  Lsb0.md  Msb0.md
doc/ptr/: BitPtr.md  eq.md
doc/serdes/: utils.md
doc/set/: BitSet.md  iter.md
doc/set/iter/: Range.md
doc/slice/: bitop_assign.md  format.md
doc/vec/: BitVec.md
examples/: aliasing.rs  ipv4.rs  readme.rs  serdes.rs  sieve.rs  simple_big_endian.rs  tour.rs
practical-use/: bitfields.html  collections.html
src/: access.rs  array.rs  atomic.rs  bits.rs  boxed.rs  cellular.rs  cursor.rs  devel.rs  domain.rs  endian.rs  field.rs  fields.rs  index.rs  indices.rs  iter.rs  lib.rs  macros.rs  mem.rs  mutability.rs  order.rs  pointer.rs  prelude.rs  private.rs  ptr.rs  rc.rs  serdes.rs  set.rs  slice.rs  store.rs  vec.rs  view.rs
src/array/: api.rs  iter.rs  ops.rs  tests.rs  traits.rs
src/boxed/: api.rs  iter.rs  ops.rs  tests.rs  traits.rs
src/field/: io.rs  permutation_tests.rs  tests.rs
src/fields/: permutation_tests.rs
src/macros/: internal.rs  tests.rs
src/ptr/: addr.rs  address.rs  proxy.rs  range.rs  single.rs  span.rs  tests.rs
src/rc/: boxed.rs  strong.rs  tests.rs  weak.rs
src/serdes/: array.rs  slice.rs  utils.rs
src/set/: api.rs  iter.rs  traits.rs
src/slice/: api.rs  guard.rs  iter.rs  new_iter.rs  ops.rs  proxy.rs  specialization.rs  tests.rs  traits.rs
src/slice/specialization/: lsb0.rs  msb0.rs
src/slice/tests/: iter.rs
src/vec/: api.rs  iter.rs  ops.rs  override.rs  tests.rs  traits.rs
src/vec/tests/: api.rs
tests/: bincode.rs  equality.rs  foreign_order.rs  issue_10.rs  issue_15.rs  issue_33.rs  issue_62.rs  issue_65.rs  issue_69.rs  issue_77.rs  issues.rs  issues_no_prelude.rs  macros.rs  readme.rs  serdes.rs
type-parameters/: bitorder.html  bitstore.html
