################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the `bitvec` Rust project to the Rust build tool, Cargo. #
################################################################################

[package]
name = "bitvec"
version = "0.17.4"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
categories = [
	"data-structures",
	"embedded",
	"no-std",
	"rust-patterns",
]
description = "A crate for manipulating memory, bit by bit"
documentation = "https://docs.rs/bitvec"
edition = "2018"
homepage = "https://myrrlyn.net/crates/bitvec"
include = [
	"Cargo.toml",
	"src/**/*.rs",
]
keywords = [
	"bitfields",
	"bits",
	"bitstream",
	"bitvec",
	"bitvector",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/bitvec"

[features]
alloc = []
atomic = []
default = [
	"atomic",
	"std",
]
std = [
	"alloc",
]

[dependencies]
radium = "0.3"

[dependencies.either]
default-features = false
version = "1.5"

[dependencies.serde]
default-features = false
features = [
	"derive",
]
optional = true
version = "1"

# Crates required when running the test suite.
[dev-dependencies]
serde = "1"
serde_json = "1"
serde_test = "1"

# Indicates the features that docs.rs should enable when building documentation.
[package.metadata.docs.rs]
features = [
	"atomic",
	"serde",
	"std",
]

[badges.codecov]
repository = "myrrlyn/bitvec"
branch = "master"
service = "github"

[badges.is-it-maintained-issue-resolution]
repository = "myrrlyn/bitvec"

[badges.is-it-maintained-open-issues]
repository = "myrrlyn/bitvec"

[badges.maintenance]
status = "actively-developed"
