################################################################################
#                               Project Manifest                               #
#                                                                              #
# This file describes the `bitvec` Rust project to the Rust build tool, Cargo. #
################################################################################

[package]
name = "bitvec"
version = "0.22.3"
authors = [
	"myrrlyn <self@myrrlyn.dev>",
]
categories = [
	"data-structures",
	"embedded",
	"no-std",
	"rust-patterns",
]
description = "A crate for manipulating memory, bit by bit"
documentation = "https://docs.rs/bitvec"
edition = "2018"
homepage = "https://myrrlyn.net/crates/bitvec"
include = [
	"Cargo.toml",
	"LICENSE.txt",
	"README.md",
	"src/**/*.rs",
	"benches/*.rs",
]
keywords = [
	"bitfields",
	"bits",
	"bitstream",
	"bitvec",
	"bitvector",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/myrrlyn/bitvec"

[features]
alloc = [
	"wyz/alloc",
]
atomic = []
default = [
	"atomic",
	"std",
]
std = [
	"alloc",
]

[dependencies]
radium = "0.6"
tap = "1"

[dependencies.funty]
version = "~1.2"
default-features = false

[dependencies.serde]
default-features = false
optional = true
version = "1"

[dependencies.wyz]
version = "0.4"
default-features = false

# Crates required when running the test suite.
[dev-dependencies]
bincode = "1.3"
criterion = "0.3"
serde = "1"
serde_json = "1"
serde_test = "1"
static_assertions = "1"

[[bench]]
name = "memcpy"
harness = false

# Indicates the features that docs.rs should enable when building documentation.
[package.metadata.docs.rs]
features = [
	"atomic",
	"serde",
	"std",
]

[badges.codecov]
repository = "myrrlyn/bitvec"
branch = "develop"
service = "github"

[badges.is-it-maintained-issue-resolution]
repository = "myrrlyn/bitvec"

[badges.is-it-maintained-open-issues]
repository = "myrrlyn/bitvec"

[badges.maintenance]
status = "actively-developed"
